# moveit_kinematics_plugin

./: CMakeLists.txt  README.md  package.xml  plugin_description.xml
include/moveit_kinematics_plugin/: TestKinematicsPlugin.h
scripts/: analytic_ik.py  forward_kinematics.py  optim_ik.py
src/: TestKinematicsPlugin.cpp
test/: analytic_ik_test.cpp  test_moveit.cpp
